# whl2conda

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  RELEASING.md  conftest.py  environment.yml  generate-man-page.py  latest  linkcheckerrc.ini  mkdocs.yml  pyproject.toml  versions.json  zensical.toml
.claude/: launch.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  release.yml
.github/workflows/: compare-conda-forge.yml  python-package-conda.yml  release.yml
23.8/: license.html  versions.json
23.8.10/: 404.html  basic-usage.html  changelog.html  index.html  install.html  license.html  limitations.html  links.html  objects.inv  pyproject.html  renaming.html  sitemap.xml  support.html  testing.html
23.8.10/api/: converter.html  stdrename.html
23.8.10/cli/: whl2conda-config.html  whl2conda-convert.html  whl2conda-diff.html  whl2conda-install.html  whl2conda.html
23.8.10/search/: search_index.js  search_index.json
23.8.3/: 404.html  index.html  objects.inv
23.8.3/cli/: whl2conda-config.html  whl2conda-install.html  whl2conda.html
23.8.4/: 404.html  index.html  sitemap.xml
23.8.4/cli/: whl2conda-install.html
23.8.6/: index.html  sitemap.xml
23.8.6/cli/: whl2conda-build.html
23.8.7/: 404.html  basic-usage.html  changelog.html  index.html  install.html  license.html  limitations.html  links.html  objects.inv  pyproject.html  renaming.html  sitemap.xml  support.html  testing.html
23.8.7/api/: converter.html  stdrename.html
23.8.7/cli/: whl2conda-config.html  whl2conda-convert.html  whl2conda-install.html  whl2conda.html
23.8.7/search/: search_index.js  search_index.json
23.8.9/: 404.html  basic-usage.html  changelog.html  index.html  install.html  license.html  limitations.html  links.html  objects.inv  pyproject.html  renaming.html  sitemap.xml  support.html  testing.html
23.8.9/api/: converter.html  stdrename.html
23.8.9/cli/: whl2conda-config.html  whl2conda-convert.html  whl2conda-install.html  whl2conda.html
23.8.9/search/: search_index.js  search_index.json
23.8/23.8.3/: license.html
23.8/cli/: whl2conda-config.html  whl2conda.html
23.8/latest/: 404.html
23.8/search/: search_index.js  search_index.json
23.9.0/: 404.html  index.html  install.html  objects.inv  sitemap.xml
23.9.0/about/: changelog.html  license.html  support.html
23.9.0/guide/: basic-usage.html  limitations.html  pyproject.html  renaming.html  testing.html
23.9.0/reference/: links.html
23.9.0/search/: search_index.js  search_index.json
24.1.0/: 404.html  index.html  install.html  sitemap.xml
24.1.0/about/: changelog.html  support.html
24.1.0/guide/: basic-usage.html  limitations.html  pyproject.html  renaming.html
24.1.0/reference/: links.html
24.1.0/search/: search_index.js  search_index.json
24.1.1/: sitemap.xml
24.1.1/about/: changelog.html
24.1.1/guide/: basic-usage.html
24.1.1/reference/: links.html
24.1.1/search/: search_index.js  search_index.json
24.1.2/: objects.inv  sitemap.xml
24.1.2/about/: changelog.html  license.html
24.1.2/guide/: basic-usage.html  limitations.html  renaming.html  testing.html
24.1.2/search/: search_index.js  search_index.json
24.4.0/: 404.html  index.html  install.html  sitemap.xml
24.4.0/about/: changelog.html  license.html  support.html
24.4.0/guide/: basic-usage.html  limitations.html  pyproject.html  renaming.html  testing.html
24.4.0/reference/: links.html
24.4.0/search/: search_index.js  search_index.json
24.5.0/: 404.html  index.html  install.html  objects.inv  sitemap.xml
24.5.0/about/: changelog.html  license.html  support.html
24.5.0/guide/: basic-usage.html  limitations.html  nav.yml  pyproject.html  renaming.html  testing.html
24.5.0/reference/: links.html
24.5.0/search/: search_index.js  search_index.json
25.3.0/: 404.html  index.html  install.html  objects.inv  sitemap.xml
25.3.0/about/: changelog.html  license.html  support.html
25.3.0/guide/: basic-usage.html  limitations.html  pyproject.html  renaming.html  testing.html
25.3.0/reference/: links.html
25.3.0/search/: search_index.js  search_index.json
26.2.0/: 404.html  index.html  install.html  nav.yml  sitemap.xml
26.2.0/about/: changelog.html  license.html  motivation.html  support.html
26.2.0/guide/: basic-usage.html  binary-conversion.html  limitations.html  nav.yml  pyproject.html  renaming.html  testing.html
26.2.0/reference/: links.html
26.2.0/search/: search_index.js  search_index.json
26.2.1/: 404.html  index.html  install.html  objects.inv  sitemap.xml
26.2.1/about/: changelog.html  nav.yml
26.2.1/guide/: basic-usage.html  binary-conversion.html  limitations.html  pyproject.html  renaming.html  testing.html
26.7.0/: 404.html  index.html  install.html  objects.inv  search.js  search.json  sitemap.xml
26.7.1/: 404.html  index.html  install.html  objects.inv  search.js  search.json  sitemap.xml
26.7.2/: 404.html  index.html  install.html  objects.inv  search.js  search.json  sitemap.xml
conda.recipe/: meta.yaml
doc/: basic-usage.md  index.md  install.md  limitations.md  links.md  mkdocs.yml  renaming.md  testing.md
latest/: 404.html  basic-usage.html  changelog.html  index.html  install.html  license.html  limitations.html  links.html  pyproject.html  renaming.html  support.html  testing.html
research/: FINDINGS.md  compare_packages.py
scripts/: test-with-conda.sh
test/: __init__.py  common.py  conftest.py  find_test_packages.py  test_cli.py  test_conda.py  test_converter.py  test_packages.py  test_prompt.py  test_pyproject.py  test_settings.py  test_stdrename.py  validator.py
test-projects/markers/: pyproject.toml
test-projects/poetry/: pyproject.toml
test-projects/poetry-2.1/: __init__.py  pyproject.toml
test-projects/recipe/: pyproject.toml
test-projects/recipe/hello/: __init__.py
test-projects/recipe/recipe-meta/: meta.yaml
test-projects/recipe/recipe-v1/: recipe.yaml
test-projects/recipe/test/: test_hello.py
test-projects/simple/: pyproject.toml
(+242 files in other folders)
