[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markers"
version = "2023.9.23"
description = "test dependencies with environment markers"
requires-python = ">=3.8"

# https://peps.python.org/pep-0508/#environment-markers
dependencies = [
    "typing-extensions ; python_version < '3.9'",
    "ntfsdump >=2.4 ; platform_system == 'Windows'",
    "atomacos ; platform_system == 'Darwin'",
    "pytest"
]
