[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello"
version = "1.0.0"
description = "whl2conda build test fixture"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
packages = ["hello"]

[[tool.whl2conda.tests]]
python = { imports = ["hello"], pip_check = false }

[[tool.whl2conda.tests]]
script = ["pytest test"]
requirements = { run = ["pytest"] }
files = { source = ["test"] }
